# Velo

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  pbuild.sh
shaders/: shader.slang
src/: buffers.cpp  device.cpp  gpu_context.cpp  graphicsPipeline.cpp  graphics_pipeline.cpp  images.cpp  infos.cpp  instance.cpp  main.cpp  physical_device.cpp  swapchain.cpp  types.cppm  unused_but_useful.cpp  velo.cpp  velo.cppm  vmaBuffer.cpp  vma_buffer.cpp  vma_image.cpp  vma_impl.cpp  vorn.cpp  vorn.cppm
